fixed table header alignment

--- a/public/style.css
+++ b/public/style.css
@@ -132,7 +132,7 @@ tr th:nth-child(2) {
 }
 
 tr th:nth-child(3) {
-  width: 16.2em;
+  width: 16em;
 }
 
 tr th:nth-child(4) {
@@ -140,7 +140,7 @@ tr th:nth-child(4) {
 }
 
 tr th:nth-child(5) {
-  width: 5.675em;
+  width: 5em;
 }
 .error-container {
   margin-top: 50px;
